src/styles.css
:root {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight: 500;
}

.background {
    position: absolute;
    height: 100%;
    width: 100%;

    object-fit: cover;
}

.search-container {
    position: absolute;
    top: calc(var(--innerHeight) / 2 - 25px);
    left: calc(var(--innerWidth) / 2 - 150px);

    height: 50px;
    width: 300px;

    display: flex;
}

.search-input {
    flex: 1;

    border: 0px;
    border-radius: 4px;
    background-color: rgba(255, 255, 255, 0.2);

    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 20px;
    font-weight: 600;

    padding: 0px 10px 0px 10px;

    color: black;
}

.search-input:focus {
    outline: none;
}

.error-message {
    position: absolute;
    top: 50px;
    
    height: 50px;
    width: 100%;
    padding: 5px 0px 0px 10px;

    color: red;
}

.content-container {
    position: absolute;
    padding: 30px 0px 0px 30px;

    display: flex;
    flex-direction: column;
    gap: 10px;

    visibility: hidden;
}

.content-container.active {
    visibility: visible;
}

.location-label {
    font-size: 30px;
}

.temperature-label {
    font-size: 90px;
}

.temperature-max-label::before {
    content: 'High: ';
}

.temperature-min-label::before {
    content: 'Low: ';
}

.temperature-label::after , .temperature-max-label::after , .temperature-min-label::after {
    content: 'ºF';
}

